tests/type_errors/calling_non_function.sy
def main
: Int -> Int
: a = f ' a

def f
: Int
: = 1

--+ expected exit status: 3
--+ expected stderr:
--+ > Failed to merge types.
--+ 
--+ Int
--+ ----
--+ Int -> _
--+ 
--+   3| : a = f ' a
--+              ^

